--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,19 +3,23 @@
 
     <head>
         <meta charset="UTF-8">
-
+        {{!-- Font Awesome --}}
         <link href="https://fonts.googleapis.com/css?family=PT+Sans|ZCOOL+KuaiLe&display=swap" rel="stylesheet">
+        {{!-- Bootstrp --}}
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
             integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        {{!-- My CSS --}}
         <link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
         <title>Eat-Da-Burger!</title>
     </head>
 
     <body>
+        {{!-- Main image --}}
         <img src="/assets/images/hamburger.jpg" width="400px" id="cute_burger">
 
         {{{ body }}}
 
+        {{!-- My name and link to github --}}
         <footer>
             <div class="container">
                 <p> 2019 Youngju Lucy Lee| <a href=https://github.com/lucy839/FriendFinder.git>GitHub </a> 
