Edited main handlebars and added index handlebars

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,6 +4,8 @@
     <head>
         <meta charset="UTF-8">
         {{!-- Font Awesome --}}
+        <script src="https://kit.fontawesome.com/fa142e857b.js"></script>
+        {{!-- Google Font --}}
         <link href="https://fonts.googleapis.com/css?family=PT+Sans|ZCOOL+KuaiLe&display=swap" rel="stylesheet">
         {{!-- Bootstrp --}}
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -14,9 +16,6 @@
     </head>
 
     <body>
-        {{!-- Main image --}}
-        <img src="/assets/images/hamburger.jpg" width="400px" id="cute_burger">
-
         {{{ body }}}
 
         {{!-- My name and link to github --}}
