--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,7 @@
-h1 {
+h1, h2 {
     font-family: 'ZCOOL KuaiLe', cursive;
+}
+
+#name, .addBurgerButton, li, footer{
+    font-family: 'PT Sans', sans-serif;
 }
