--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,42 +1,43 @@
-<h1>Eat-Da-Burger!</h1>
-
-<main>
+{{!-- Main --}}
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4">Eat-Da-Burger</h1>
+    <img src="/assets/images/hamburgerSet.jpeg" width="100px" id="cute_burger">
+  </div>
+</div>
   <div class="container">
     <div class="row">
       <div class="col s6">
-        {{#each burgers}}
+        <ol>
+          {{#each burgers}}
           {{#unless this.devoured}}
-            <div>
-              <form action="/burgers/{{this.id}}?_method=PUT" method="POST">
-                <button type="submit" class='burgerAvailable'> {{this.burger_name}}</button>
-              </form>
-            </div>
+          <li>{{this.burger_name}}
+            <button type="submit" class='burgerAvailable'><i class="fas fa-utensils"></i> </button>
+          </li>
           {{/unless}}
-        {{/each}}
+          {{/each}}
       </div>
 
       <div class="col s6">
-        {{#each burgers}}
-          {{#if this.devoured}}
-            <div class='burgerEaten'>
-              <div>
-                {{this.burger_name}}
-              </div>
-            </div>
-          {{/if}}
-        {{/each}}
+        <ol class='burgerEaten'>
+          {{#each burgers}}
+            {{#if this.devoured}}
+              <li>{{this.burger_name}}</li>
+            {{/if}}
+          {{/each}}
+        </ol>
       </div>
     </div>
   </div>
-</main>
 
-<h2>Add A Burger Option</h2>
+{{!-- Add New Burger --}}
+<h2>Enter a burger you want to eat and submit!</h2>
 
 <div class="row">
   <div class="col s12">
     <form action="/burgers" method="POST">
-      <input type="text" id="name" name="burger_name" placeholder="Uber Delicious Burger">
-      <button type="submit" class="addBurgerButton">Add The Burger</button>
+      <input type="text" id="name" name="burger_name" placeholder="World's best burger">
+      <button type="submit" class="addBurgerButton">Submit <i class="fas fa-clipboard-list"></i></button>
     </form>
   </div>
 </div>
