--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,38 +1,40 @@
-{{!-- Main --}}
+{{!-- Main Logo --}}
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
     <h1 class="display-4">Eat-Da-Burger</h1>
     <img src="/assets/images/hamburgerSet.jpeg" width="100px" id="cute_burger">
   </div>
 </div>
-  <div class="container">
-    <div class="row">
-      <div class="col s6">
-        <ol>
-          {{#each burgers}}
+
+<div class="container">
+  <div class="row">
+    {{!-- Uneaten Burger --}}
+    <div class="col s6">
+      <ol>
+        {{#each burgers}}
           {{#unless this.devoured}}
           <li>{{this.burger_name}}
             <button type="submit" class='burgerAvailable'><i class="fas fa-utensils"></i> </button>
           </li>
           {{/unless}}
-          {{/each}}
-      </div>
+        {{/each}}
+    </div>
 
-      <div class="col s6">
-        <ol class='burgerEaten'>
-          {{#each burgers}}
-            {{#if this.devoured}}
-              <li>{{this.burger_name}}</li>
-            {{/if}}
-          {{/each}}
-        </ol>
-      </div>
+    {{!-- Eaten Burger --}}
+    <div class="col s6">
+      <ol class='burgerEaten'>
+        {{#each burgers}}
+        {{#if this.devoured}}
+        <li>{{this.burger_name}}</li>
+        {{/if}}
+        {{/each}}
+      </ol>
     </div>
   </div>
+</div>
 
 {{!-- Add New Burger --}}
 <h2>Enter a burger you want to eat and submit!</h2>
-
 <div class="row">
   <div class="col s12">
     <form action="/burgers" method="POST">
