--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,6 +12,8 @@
             integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         {{!-- My CSS --}}
         <link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
+        <script src="https://code.jquery.com/jquery.js"></script>
+
         <title>Eat-Da-Burger!</title>
     </head>
 
@@ -26,4 +28,5 @@
             </div>
         </footer> 
     </body> 
+
 </html>
