--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,15 +18,23 @@
     </head>
 
     <body>
-        {{{ body }}}
+        {{!-- Main Logo --}}
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+                <h1 class="display-4">Eat-Da-Burger            
+                    <img src="/assets/images/hamburgerSet.jpeg" width="100px" id="cute_burger">
+                </h1>
+            </div>
+        </div>
 
+        {{{ body }}}
+        <br><br>
         {{!-- My name and link to github --}}
         <footer>
             <div class="container">
-                <p> 2019 Youngju Lucy Lee| <a href=https://github.com/lucy839/FriendFinder.git>GitHub </a> 
+                <p> 2019 Youngju Lucy Lee | <a href=https://github.com/lucy839/FriendFinder.git>GitHub </a> 
                 </p> 
             </div>
         </footer> 
-    </body> 
-
+    </body>
 </html>
