--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,38 +1,23 @@
-{{!-- Main Logo --}}
-<div class="jumbotron jumbotron-fluid">
-  <div class="container">
-    <h1 class="display-4">Eat-Da-Burger</h1>
-    <img src="/assets/images/hamburgerSet.jpeg" width="100px" id="cute_burger">
-  </div>
-</div>
-
-<div class="container">
+<div class="container app">
   <div class="row">
     {{!-- Uneaten Burger --}}
-    <div class="col s6">
+    <div class="col-md-6">
       <ol>
         {{#each burgers}}
         {{#unless this.devoured}}
         <form action="burger/eat/{{id}}" method="POST">
           <div class="input-group">
              <li>{{this.burger_name}}
-          <button type="submit" class='burgerAvailable'><i class="fas fa-utensils"></i> </button>
+          <button type="submit" class='uneaten'><i class="fas fa-utensils"></i> </button>
         </li>
-            {{!-- <li class="form-control">{{id}}. {{burger_name}}</li>
-            <span class="input-group-btn">
-              <button class="btn btn-success devour-button" type="submit">Devour It!</button>
-            </span> --}}
           </div>
         </form>
-        {{!-- <li>{{this.burger_name}}
-          <button type="submit" class='burgerAvailable'><i class="fas fa-utensils"></i> </button>
-        </li> --}}
         {{/unless}}
         {{/each}}
     </div>
 
     {{!-- Eaten Burger --}}
-    <div class="col s6">
+    <div class="col-md-6">
       <ol class='burgerEaten'>
         {{#each burgers}}
         {{#if this.devoured}}
@@ -43,14 +28,16 @@
     </div>
   </div>
 </div>
-
-{{!-- Add New Burger --}}
-<h2>Enter a burger you want to eat and submit!</h2>
-<div class="row">
-  <div class="col s12">
-    <form action="/burgers" method="POST">
-      <input type="text" id="name" name="burger_name" placeholder="World's best burger">
-      <button type="submit" class="addBurgerButton">Submit <i class="fas fa-clipboard-list"></i></button>
-    </form>
+<hr>
+<div class="container app">
+  {{!-- Add New Burger --}}
+  <div class="row">
+    <div class="col-md-12">
+        <h2>Enter a burger you want to eat and submit!</h2>
+      <form action="/burgers" method="POST">
+        <input type="text" id="name" name="burger_name" placeholder="World's best burger">
+        <button type="submit" class="add">Submit <i class="fas fa-clipboard-list"></i></button>
+      </form>
+    </div>
   </div>
 </div>
