--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,4 @@
+/* general */
 body{
     background: rgb(245, 168, 0);
 }
@@ -11,6 +12,7 @@ h1, h2 {
     width:80%;
 }
 
+/* jumbotron */
 .jumbotron{
     width:60%;
     margin-top:2%;
@@ -24,6 +26,7 @@ h1{
     text-align: center;
 }
 
+/* app */
 .app{
     margin-left:20%;
 }
@@ -46,6 +49,8 @@ li{
 .add:hover, .uneaten:hover{
     background: rgba(255, 0, 0, 0.564);
 }
+
+/* footer */
 footer{
     text-align: center;
 }
