clean up the format on views

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,6 +12,7 @@
             integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         {{!-- My CSS --}}
         <link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
+        {{!-- jQuery --}}
         <script src="https://code.jquery.com/jquery.js"></script>
 
         <title>Eat-Da-Burger!</title>
@@ -28,7 +29,9 @@
         </div>
 
         {{{ body }}}
+
         <br><br>
+
         {{!-- My name and link to github --}}
         <footer>
             <div class="container">
