--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -35,7 +35,7 @@
         {{!-- My name and link to github --}}
         <footer>
             <div class="container">
-                <p> 2019 Youngju Lucy Lee | <a href=https://github.com/lucy839/FriendFinder.git>GitHub </a> 
+                <p> 2019 Youngju Lucy Lee | <a href=https://github.com/lucy839/burger.git>GitHub </a> 
                 </p> 
             </div>
         </footer> 
